# idle-phone-inc

./: .gitmodules  CMakeLists.txt  README.md  build-ios.sh  build.cmd
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dreamskies/phoneinc/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: atlases.json  microtasks.json  stylebook.json
assets/localization/: english.txt  russian.txt
assets/textures/managers/: animation.json  atlas.json
assets/textures/trucks/: 1_animation.json  1_atlas.json  4_animation.json  4_atlas.json
assets/textures/workers/: 1_atlas.json  animation.json  atlas.json  worker_animation.json
assets/xml/: bottom_menu.xml  gameplay_screen.xml  top_menu.xml
ios/: Info.plist  Main.storyboard  app_delegate.mm  main.mm
ios/Images.xcassets/AppIcon.appiconset/: Contents.json
output/: index.html  index.js
src/: application.cpp  application.h  balance.cpp  balance.h  bottom_menu.cpp  bottom_menu.h  cheats.cpp  cheats.h  defines.h  factory.cpp  factory.h  gameplay.cpp  gameplay.h  helpers.cpp  helpers.h  main.cpp  manager.cpp  manager.h  microtasks.cpp  microtasks.h  profile.cpp  profile.h  room.cpp  room.h  screen.h  street.cpp  street.h  top_menu.cpp  top_menu.h  truck.h  tutor.cpp  tutor.h  window.h  worker.cpp  worker.h
src/screens/: bottom_menu.cpp  bottom_menu.h  factory.cpp  factory.h  gameplay.cpp  gameplay.h  gameplay_screen.cpp  gameplay_screen.h  loading_screen.cpp  loading_screen.h  manager.cpp  manager.h  microtasks_holder.cpp  microtasks_holder.h  room.cpp  room.h  screen.cpp  screen.h  street.cpp  street.h  top_menu.cpp  top_menu.h  truck.cpp  truck.h  worker.cpp  worker.h
src/windows/: bottom_menu_locked_window.cpp  bottom_menu_locked_window.h  building_upgrade_window.cpp  building_upgrade_window.h  building_window.cpp  building_window.h  room_upgrade_window.cpp  room_upgrade_window.h  room_window.cpp  room_window.h  shop_upgrade_window.cpp  shop_upgrade_window.h  shop_window.cpp  shop_window.h  warehouse_upgrade_window.cpp  warehouse_upgrade_window.h  warehouse_window.cpp  warehouse_window.h  window.cpp  window.h
